# RL_Poker

./: .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  pyproject.toml  pyrightconfig.json
.sisyphus/: boulder.json
.sisyphus/checkpoints/: rl_poker_ppo_1_1770043416_step_896.pt  rl_poker_ppo_1_1770044368_step_0.pt  rl_poker_ppo_1_1770044385_step_896.pt  rl_poker_ppo_1_1770044452_step_1024.pt  rl_poker_ppo_1_1770044524_step_1024.pt  rl_poker_ppo_1_1770045041_step_128.pt  rl_poker_ppo_1_1770045270_step_12800.pt  rl_poker_ppo_1_1770046856_step_128.pt
.sisyphus/plans/: rl-poker-rl-project.md
checkpoints/: rl_poker_42_1770085193_final.pt  rl_poker_42_1770085219_final.pt  rl_poker_42_1770085459_final.pt  rl_poker_42_1770088202_final.pt  rl_poker_42_1770088273_final.pt  rl_poker_42_1770088357_final.pt  rl_poker_42_1770088557_final.pt  rl_poker_42_1770088663_final.pt  rl_poker_ppo_1_1770045639_step_2048.pt  rl_poker_ppo_1_1770046132_step_5120.pt  rl_poker_ppo_1_1770046184_step_20480.pt  rl_poker_ppo_1_1770046419_step_20480.pt  rl_poker_ppo_1_1770046626_step_30720.pt  rl_poker_ppo_1_1770048719_step_10112.pt  rl_poker_ppo_1_1770048719_step_6400.pt  rl_poker_ppo_1_1770048756_step_12800.pt  rl_poker_ppo_1_1770048756_step_6400.pt
docs/: TECHNICAL_REPORT_CN.md
playground/: README.md  play_tui.py  web_server.py
playground/web/: index.html  script.js  style.css
rl_poker/: __init__.py
rl_poker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rl_poker/agents/: __init__.py  heuristic_agent.py  policy_pool.py  (+1 more)
scripts/: run_tests.py  select_checkpoints.py  train_gpu.sh
tests/: __init__.py  test_engine.py  test_gpu_parity.py  test_metrics.py  test_moves.py  test_rule_parity.py  test_rules.py
(+66 files in other folders)
